[package]
name = "eight_ball"
version = "0.2.5"
authors = ["AregevDev <aregevdev@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/AregevDev/eight_ball"
description = "Mimics the original magic eight ball game."
documentation = "https://docs.rs/eight_ball"

[dependencies]
rand = "0.7.0"
